--- a/software/pom.xml
+++ b/software/pom.xml
@@ -16,14 +16,9 @@
   </properties>
 
   <modules>
-    <module>lambda-layer-service-1-cert</module>
-    <module>lambda-layer-service-2-cert</module>
-    <module>lambda-ssl-utility-layer</module>
     <module>0-lambda-no-mtls</module>
-    <module>1-lambda-only</module>
-    <module>2-lambda-using-separate-layer</module>
-    <module>3-lambda-using-parameter-store</module>
-    <module>4-lambda-using-multiple-certificates</module>
+    <module>1-lambda-mtls</module>
+     <module>2-lambda-using-separate-layer</module>
   </modules>
 
   <dependencyManagement>
